[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/artists/artist_card.gd" id="1"]

[node name="ArtistCard" type="PanelContainer"]
custom_minimum_size = Vector2(0, 120)
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="IconRect" type="TextureRect" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
expand_mode = 1
stretch_mode = 5

[node name="Info" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="HBox/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "Artist Name"

[node name="CountLabel" type="Label" parent="HBox/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "Owned: 0"

[node name="LevelLabel" type="Label" parent="HBox/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "Lv. 0"

[node name="ProductionLabel" type="Label" parent="HBox/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "0/sec"

[node name="Buttons" type="VBoxContainer" parent="HBox"]
layout_mode = 2

[node name="BuyButton" type="Button" parent="HBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Sign (50)"

[node name="UpgradeButton" type="Button" parent="HBox/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Level Up (25)"

[node name="LockOverlay" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
color = Color(0, 0, 0, 0.6)
mouse_filter = 2
visible = false
